helm/inventory-back/dash.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
